--- a/css/styles.css
+++ b/css/styles.css
@@ -41,11 +41,15 @@
     justify-content: space-between;
   }
   .flexCenter {
+    display: flex;
     align-items: center;
     justify-content: center;
   }
   .flexWrap {
     flex-wrap: wrap;
+  }
+  .infoMargin {
+    width: 1000px;
   }
   #bar1, #bar2, #bar3 {
     width: 35px;
@@ -305,8 +309,6 @@
     display: flex;
     flex-wrap: wrap;
     /* gap: 10px; */
-    justify-content: space-between;
-    align-items: center;
   }
   .wrapList {
     display: flex;
@@ -571,10 +573,13 @@
       width: 350px;
     }
     .stepsBox {
-      width: 500px;
+      width: 400px;
     }
     .speakerTitle {
         font-size: 30px;
+    }
+    .infoMargin {
+        width: 800px;
     }
   }
   @media only screen and (max-width: 810px) {
@@ -639,6 +644,12 @@
     } */
     .speakerTitle {
         font-size: 30px;
+    }
+    .stepsBox {
+        width: 600px;
+    }
+    .infoMargin {
+        width: 500px;
     }
   }
   @media only screen and (max-width: 510px) {
@@ -758,6 +769,13 @@
       height: 250px;
       width: 250px;
     }
+    .infoMargin {
+        width: 300px;
+    }
+    .stepsBox {
+        width: 300px;
+        padding: 0;
+    }
   }
   @media only screen and (max-width: 400px) {
     .whiteTitle {
@@ -789,5 +807,25 @@
     .infoImg {
       height: 200px;
       width: 200px;
+    }
+    .infoMargin {
+        width: 250px;
+    }
+  }
+  @media only screen and (max-width: 280px) {
+    .stepsBox {
+        width: 250px;
+    }
+    .infoMargin {
+        width: 250px;
+    }
+    .num {
+        width: 100%;
+    }
+    .ecosystem {
+        width: 280px;
+    }
+    .numCol {
+        padding: 30px 0;
     }
   }
