--- a/css/styles.css
+++ b/css/styles.css
@@ -572,6 +572,13 @@
     border-radius: 10px;
     transition: all ease-in-out 0.3s;
   }
+  .compLogo {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    align-items: center !important;
+    justify-content: center !important;
+  }
   .partnerLogo:hover {
     background-color: #d4d4d4;
   }
