--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@
   body > footer a {
     text-decoration: none;
     scroll-behavior:smooth !important;
+    padding-bottom: env(safe-area-inset-bottom);
   }
   .flexRow {
     display: flex;
