--- a/css/styles.css
+++ b/css/styles.css
@@ -21,18 +21,6 @@
   * {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
-  
-  html {
-    scroll-behavior: smooth;
-    background: #343434;
-    scroll-behavior:smooth !important;
-  }
-  /* footer section */ 
-  body > footer a {
-    text-decoration: none;
-    scroll-behavior:smooth !important;
-    padding-bottom: env(safe-area-inset-bottom);
-  }
   .flexRow {
     display: flex;
     flex-direction: row;
@@ -53,10 +41,7 @@
     flex-wrap: wrap;
   }
   .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
+    width: 100vw;
     height: 100vh;
     padding: 0px 100px 100px 100px;
     background-color: #000000; /*03001C*/
@@ -64,7 +49,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    z-index: 0 !important;
   }
   .topContacts {
     position: absolute;
@@ -99,7 +83,7 @@
   }
   .column800 {
     position: absolute;
-    bottom: 20px;
+    bottom: 70px;
     left: 0;
     right: 0;
     width: 100%;
